# ethica

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
docs/: getting-started.md
ethica/: __init__.py  __main__.py
ethica/checks/: base.py  dependency_checks.py  file_checks.py
ethica/cli/: check.py  frameworks.py  init.py
ethica/core/: checker.py  registry.py
ethics_ai/: __init__.py  __main__.py
ethics_ai/checks/: dependency_checks.py  file_checks.py
ethics_ai/cli/: check.py  frameworks.py  init.py
ethics_ai/core/: checker.py  registry.py
examples/basic-usage/: .ai-ethics.yaml  README.md  requirements.txt
examples/basic-usage/docs/: MODEL_CARD.md  PRIVACY_IMPACT_ASSESSMENT.md
examples/basic-usage/src/: model.py
frameworks/: registry.yaml
frameworks/unesco-2021/: framework.yaml
tests/fixtures/compliant_project/: MODEL_CARD.md  requirements.txt
tests/fixtures/compliant_project/docs/: PRIVACY_IMPACT_ASSESSMENT.md
tests/integration/: test_unesco_checks.py
tests/unit/: test_checks.py  test_registry.py
